Correction des erreurs d'anglais dans le code #35